# Lightpack

./: .gitignore
Firmware/: CMakeLists.txt  LedManager.c  LedManager.h  ws2811.h
Firmware/Firmware_m/: .cproject  .project  Descriptors.c  Descriptors.h  LedDriver.c  LedDriver.h  LedManager.c  LedManager.h  Lightpack.c  Lightpack.h  LightpackUSB.c  datatypes.h
